[gd_scene load_steps=2 format=3 uid="uid://cfeqes7ogmhvs"]

[ext_resource type="Script" uid="uid://d0jw7q40sr4iu" path="res://display/squares/launch_button_square/launch_button_square.gd" id="1_ej5p5"]

[node name="LaunchButtonSquare" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ej5p5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LaunchMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LaunchButton" type="Button" parent="VBoxContainer/LaunchMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"ButtonOpen"
theme_override_font_sizes/font_size = 100
disabled = true
text = "???"

[node name="AbortMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbortButton" type="Button" parent="VBoxContainer/AbortMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"ButtonClose"
theme_override_font_sizes/font_size = 100
text = "ABORT"
